# datamanager

./: .gitignore  pyproject.toml  requirements.txt
gui/: core.py  gui.py  remote.py  streamlit_components.py
roadmap_datamanager/: __init__.py  configuration.py  datalad_gin_api.py  datalad_utils.py  datamanager.py  dm_config.py  gui.py  helpers.py  metadata.py  metalad_export.py  roadmap_datamanager.py
roadmap_datamanager/gui/: gui.py  remote.py  streamlit_components.py
roadmap_datamanager/resources/procedures/: scidata_init_tree.py  scidata_intake.py  scidata_new_experiment.py  scidata_validate.py
roadmap_datamanager/tests/: datalad_integration_test.py
tests/: datalad_integration_test.py
